created event create form and made templates

--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -10,7 +10,7 @@
 
 		            <div id="user_profile">
 			            <div>
-			                <span id="name">{{user.name}}</span>
+			                <span id="pro_name">{{user.name}}</span>
 			            </div>
 			        
 			        	<div id="infodiv">
