--- a/client/index.html
+++ b/client/index.html
@@ -96,6 +96,7 @@
           <script src="app/dashboard/dashboardService.service.js"></script>
           <script src="app/group/group.controller.js"></script>
           <script src="app/group/group.js"></script>
+          <script src="app/group/groupdate.controller.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/profile/profile.controller.js"></script>
