--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -107,7 +107,22 @@
 	testing -->
 
 	<!--To be put:: The recent videos uploaded and trending videos divs-->
-</div>
+	</div>
+	<form name="form" ng-submit="submit(form)">
+		<div class="form-group">
+			<label>Name of Stage</label>
+			<input type="text" class="form-control" ng-model="form.stagename">
+		</div>
+		<div class="form-group">
+			<label>Description</label>
+			<input type="text" class="form-control" ng-model="form.description">
+		</div>
+		<div class="form-group">
+			<label>cover pic</label>
+			<input type="text" class="form-control" ng-model="form.posterUrl">
+		</div>
+		<button type="submit" class="btn btn-primary">Submit</button>
+	</form>
 </div>
 
 
