--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,12 +1,13 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
-<div class="container">
+<div id="hidden"></div>
+<div style="position:absolute;top:-5px;"><img src="assets/images/loginpage.png" width="100%" height="100%"></div>
+<div class="container" id="login">
   <div class="row">
     <div class="col-sm-12">
       <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
+   <!--   <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
       <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
-    </div>
+    </div>-->
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
@@ -42,11 +43,12 @@
           </a>
         </div>
 
+
         <hr>
         <div>
           <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
             <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
+          </a></br>
           <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
             <i class="fa fa-google-plus"></i> Connect with Google+
           </a>
