--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,6 +1,8 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
+<div id="hidden"></div>
+<div style="position:absolute;top:-5px;"><img src="assets/images/loginpage.png" width="100%" height="100%"></div>
 
-<div class="container">
+<div class="container" id="login">
   <div class="row">
     <div class="col-sm-12">
       <h1>Sign up</h1>
