--- a/client/app/stage/stage.html
+++ b/client/app/stage/stage.html
@@ -1,29 +1,48 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div >
-	<div>
+	<div class="thumbs_wrap col-md-12">
 		<div id="stage_info" class="col-md-3">
 			<span><h2>{{stage.name}}</h2></span>
 		<!--	<span><p>{{stage.description}}</p></span>	-->
-			<button ng-hide="isFollowing" style="color:black" ng-click="follow()" id="upload_btn">Follow</button>
-			<button ng-show="isFollowing" style="color:black" ng-click="unfollow()" class="w2b" id="pload_btn">Following....</button>
+			<button ng-hide="isFollowing"  ng-click="follow()" class="w2b">Follow</button>
+			<button ng-show="isFollowing"  ng-click="unfollow()" class="w2b">Following</button>
 		</div>
 		<div id="stage_pic" class="col-md-12"><img src="{{stage.posterUrl}}" width="100%" height="400px" alt="Badminton ART"></div>
-	</div>
-	<div>
-		<div id="stage_content">
-			<ul class="nav nav-tabs">
+		<div class="stage_nav_wrap_out thumbs_wrap">
+			<script>
+				$(".scroll_anim").click(function(event){     
+				    
+				    $('html,body').animate({scrollTop:$("#stage_content_wrap").offset().top}, 500);
+				});
+			</script>
+			<ul class="nav nav-tabs" id="stage_nav" class="scroll_anim">
 				<li class="active"><a data-toggle="tab" href="#bkd">Want you to see</a></li>
 				<li><a href="#trending" data-toggle="tab">Will love to see</a></li>
 				<li><a href="#everything" data-toggle="tab">Everything to see</a></li>
 			</ul>
+				
+		</div>
+	</div>
+	<div>
+		<div id="stage_content" class="thumbs_wrap col-md-12">
+			
+			
+			<div class="tab-content">
+				<div class="col-md-9">
+					<div id="stage_content_wrap">
+						<div id="bkd" class="tab-pane fade in active">Booked content will be here</div>
+						<div id="trending" class="tab-pane fade">Hot content </div>
+						<div id="everything" class="tab-pane fade">Everthing related to stage will be here sorted by time</div>
+					</div>
 
-			<div class="tab-content col-md-9">
-				<div id="bkd" class="tab-pane fade in active">Booked content will be here</div>
-				<div id="trending" class="tab-pane fade">Hot content </div>
-				<div id="everything" class="tab-pane fade">Everthing related to stage will be here sorted by time</div>
-			</div>
-			<div class="col-md-3" id="groups_list">
-				<div id="clubs_list_wrap">Groups showup if you logged in</div>
+
+				</div>
+
+				<div class="col-md-3">
+					<div id="stage_content_wrap" class="thumbs_wrap">
+						<div id="clubs_list_wrap">Groups showup if you logged in</div>
+					</div>
+				</div>
 			</div>
 		</div>
 		
