--- a/client/app/account/signup/signup.html
+++ b/client/app/account/signup/signup.html
@@ -1,9 +1,9 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div id="hidden"></div>
-<div style="position:absolute;top:-5px;"><img src="assets/images/loginpage.png" width="100%" height="100%"></div>
+<div style="position:absolute;top:-5px;z-index:-1"><img src="assets/images/loginpage3.jpg" width="100%" height="100%"></div>
 
-<div class="container" id="login">
-  <div class="row">
+<div class="container glassy" id="login">
+  <div class="row ">
     <div class="col-sm-12">
       <h1>Sign up</h1>
     </div>
@@ -57,10 +57,10 @@
         </div>
 
         <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
+          <button class="btn btn-inverse btn-lg btn-login b2w" type="submit">
             Sign up
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/login">
+          <a class="btn btn-default btn-lg btn-register b2w" href="/login">
             Login
           </a>
         </div>
