--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -1,6 +1,12 @@
 
 
 
+<div ng-controller="UploadPortalCtrl">
+	<ul>
+	<li ng-repeat="posts in posts">
+		{{posts.type}}dfg
+	</li>
+	</ul>
 
 
 <div id="for_blur" class="thumbs_wrap col-md-12">									
@@ -157,4 +163,5 @@
 										 12:30 pm 8th August
 									</span>
 								</div>
+</div>
 </div>
