--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
       <link rel="stylesheet" href="app/account/login/login.css">
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/club/club.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
       <link rel="stylesheet" href="app/event/event.css">
       <link rel="stylesheet" href="app/group/group.css">
@@ -92,6 +93,9 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/club/club.controller.js"></script>
+          <script src="app/club/club.directive.js"></script>
+          <script src="app/club/club.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/dashboard/dashboardService.service.js"></script>
