Posts done.. Doing pro pic edit

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,9 @@
+
+<!--***********************Image & Video view Modal********************-->
+
+<div ng-include="'components/modal/modal.html'"></div>
+<!--******************************************************************-->
+
 <div ng-controller="DashboardCtrl" id="for_blur">
 <div ng-include="'components/navbar/navbar.html'"></div>
 	
@@ -183,7 +189,3 @@
 	<!--To be put:: The recent videos uploaded and trending videos divs-->
 </div>
 	
-
-<!--***********************Image view Modal********************-->
-
-<div ng-include="'app/admin/admin.html'"></div>
