--- a/client/app/stage/stage.html
+++ b/client/app/stage/stage.html
@@ -1,3 +1,9 @@
+<!--***********************Image & Video view Modal********************-->
+
+<div ng-include="'components/modal/modal.html'"></div>
+<!--******************************************************************-->
+
+
 <div ng-include="'components/navbar/navbar.html'"></div>
 <div >
 	<div class="thumbs_wrap col-md-12">
@@ -54,6 +60,3 @@
 	</div>
 </div>
 
-<!--******************Image&videomodal******************************-->
-
-<div ng-include="'app/admin/admin.html'"></div>
