Added gallery pic addition

--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -1,3 +1,10 @@
+<!--***********************Image & Video view Modal********************-->
+
+<div ng-include="'components/modal/modal.html'"></div>
+<!--******************************************************************-->
+
+
+
 <div ng-controller="ClubCtrl">
 
 	<div id="club_wrapper" class="col-md-9">
