--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -11,7 +11,7 @@
             <!--user pic and info goes here-->
             	<div id="pro_pic">
             		<div id="pro_pic_wrapper" >
-           				<img src="Pro_pic/prabhas.jpg" style="width:100%;height:100%;"></img>
+           				<img src="{{GalleryPic}}" style="width:100%;height:100%;"></img>
            				<div id="gal_pic_edit" data-toggle="modal" data-target="#gal_pic_modal" onclick="document.getElementById('for_blur').style.filter = 'blur(5px)'"><a href=""><u>Edit Pic</u></a></div>
 
            				<script>
