added basic forms

--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -58,4 +58,10 @@
     </div>
   </div>
   <hr>
+  <div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
 </div>
