--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,10 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
+      <link rel="stylesheet" href="app/forms/formCreate/formCreate.css">
+      <link rel="stylesheet" href="app/forms/formTemplates/formTemplates.css">
+      <link rel="stylesheet" href="app/forms/formView/formView.css">
+      <link rel="stylesheet" href="app/forms/forms.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/profile/profile.css">
       <link rel="stylesheet" href="app/uploadPortal/uploadPortal.css">
@@ -82,6 +86,13 @@
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/dashboard/dashboardService.service.js"></script>
+          <script src="app/forms/formCreate/formCreate.controller.js"></script>
+          <script src="app/forms/formCreate/formCreate.js"></script>
+          <script src="app/forms/formTemplates/formTemplates.controller.js"></script>
+          <script src="app/forms/formTemplates/formTemplates.js"></script>
+          <script src="app/forms/formView/formView.controller.js"></script>
+          <script src="app/forms/formView/formView.js"></script>
+          <script src="app/forms/forms.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/profile/profile.controller.js"></script>
