--- a/client/app/viewPage/viewPage.html
+++ b/client/app/viewPage/viewPage.html
@@ -1,6 +1,6 @@
 <div ng-controller="ViewPageCtrl">
 	<div ng-include="'components/navbar/navbar.html'"></div>
-
+	<h2>{{video.vidname}}</h2>
 	<div class="col-xs-3"></div>
 	<div class="col-xs-6" my-youtube code='vidCode'>
 		
@@ -24,13 +24,19 @@
             <h4>Leave a Comment:</h4>
             <form name="myForm" ng-submit="submit()" class="form" novalidate> 
                 <div class="form-group">
-            		<textarea class="form-control" rows="3" ng-model="commentdata"></textarea>
+            		<textarea class="form-control" rows="3" ng-model="commentData"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
         <div>
-        	<div></div>
+        	<div ng-repeat="comment in video.comments">
+        		<p>{{comment.comment.commentPutter}}</p>
+        		<p>{{comment.comment.commentData}}</p>
+        		<p>{{comment.comment.datePosted}}</p>
+        		<button class="btn btn-default" ng-show="comment.comment.commentPutter===user._id" ng-click="delete(comment._id)">Delete</button>
+        		<button class="btn btn-default" ng-show="comment.comment.commentPutter===user._id" ng-click="edit(comment._id)">Edit</button>
+        	</div>
         </div>
   	</div>
 </div>
