club set and likes working a bit

--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,8 @@
     <!-- endbuild -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src=" http://github.com/jaz303/jquery-grab-bag/tree/master/javascripts/jquery.autogrow-textarea.js"></script>
+
     <script>
       
     </script>
