--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -13,7 +13,7 @@
     </li>
   </ul>
 </div>-->
-	<form name="form" ng-submit="submit(form)">
+	<form name="form" ng-submit="submitClub(form)">
 		<div class="form-group">
 			<label>Name of Club</label>
 			<input type="text" class="form-control" ng-model="form.clubname">
@@ -28,6 +28,22 @@
 		</div>
 		<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
+
+  <form name="form" ng-submit="submitStage(form)">
+    <div class="form-group">
+      <label>Name of Stage</label>
+      <input type="text" class="form-control" ng-model="form.stagename">
+    </div>
+    <div class="form-group">
+      <label>Description</label>
+      <input type="text" class="form-control" ng-model="form.description">
+    </div>
+    <div class="form-group">
+      <label>cover pic</label>
+      <input type="text" class="form-control" ng-model="form.posterUrl">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 
 
 
