set rating, corrected comments in video, major part of events done, refreshing event in club not done

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
       <link rel="stylesheet" href="app/club/club.css">
       <link rel="stylesheet" href="app/dashboard/dashboard.css">
       <link rel="stylesheet" href="app/event/event.css">
+      <link rel="stylesheet" href="app/fest/fest.css">
       <link rel="stylesheet" href="app/group/group.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/profile/profile.css">
@@ -97,11 +98,14 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/club/club.controller.js"></script>
           <script src="app/club/club.js"></script>
+          <script src="app/club/clubService.service.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.js"></script>
           <script src="app/dashboard/dashboardService.service.js"></script>
           <script src="app/event/event.controller.js"></script>
           <script src="app/event/event.js"></script>
+          <script src="app/fest/fest.controller.js"></script>
+          <script src="app/fest/fest.js"></script>
           <script src="app/group/group.controller.js"></script>
           <script src="app/group/group.js"></script>
           <script src="app/group/groupdate.controller.js"></script>
@@ -120,6 +124,7 @@
           <script src="app/viewPage/viewPageService.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
+          <script src="components/modal/modal.controller.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
