--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -27,15 +27,15 @@
 		</span>
 		</div>-->
 
-		<ul class="nav nav-tabs">
-		  <li class="active"><a data-toggle="tab" href="#booked_display">Home</a></li>
-		  <li><a data-toggle="tab" href="#stage">All</a></li>
+		<ul class="nav nav-tabs" style="margin:30px 30% 10px;text-align:center">
+		  <li class="active" style="width:50%;"><a data-toggle="tab" href="#booked_display">Home</a></li>
+		  <li style="width:50%"><a data-toggle="tab" href="#stage">All</a></li>
 		</ul>
 
 		<div class="tab-content ">
 			<div id="booked_display" class="tab-pane fade in active" style="min-height:100%">
 				<div>
-					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item.postId" ng-style="margin:5px;width:33.33%;float:left" class="col-md-4">
+					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item" ng-style="margin:5px;width:33.33%;float:left" class="col-md-4">
 						
 					</content-item>
 				</div>
