--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -45,6 +45,11 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 
+  <div>
+      <input type="text" ng-model="creditDet">
+      <button ng-click="submitCredit(creditDet)">Submit Credit</button>
+  </div>  
+
 
 
   <h2>Booking Approval<hr> </h2>  
