autocomplete credit, all posts working, commiting to check modal prb

--- a/client/app/event/event.html
+++ b/client/app/event/event.html
@@ -60,8 +60,11 @@
                               <input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
                             </div>
                             <div class="form-group">
-                              <label>Stage to be tagged</label>
-                              
+                              <tags-input ng-model="form.vedik" add-on-paste="true" display-property="name" placeholder="Add the Vedik" add-from-autocomplete-only="true"  class="bootstrap" replace-spaces-with-dashes="false">
+
+                                  <auto-complete source="loadTags($query)" max-results-to-show="10"></auto-complete>
+
+                                </tags-input>
                             </div>
                             <button type="submit" class="b2w">Submit</button>
                           </form>
