--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,10 @@
       <!-- bower:css -->
       <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+      <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+      <link rel="stylesheet" href="bower_components/bootstrap-css/css/bootstrap.min.css" />
+      <link rel="stylesheet" href="bower_components/ngImgCrop/compile/minified/ng-img-crop.css" />
+      <link rel="stylesheet" href="bower_components/mdPickers/dist/mdPickers.min.css" />
       <link rel="stylesheet" href="bower_components/ng-tags-input/ng-tags-input.min.css" />
       <!-- endbower -->
       <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -108,6 +112,23 @@
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+      <script src="bower_components/angular-smart-table/dist/smart-table.js"></script>
+      <script src="bower_components/angular-permission/dist/angular-permission.js"></script>
+      <script src="bower_components/ng-facebook/ngFacebook.js"></script>
+      <script src="bower_components/angular-animate/angular-animate.js"></script>
+      <script src="bower_components/angular-aria/angular-aria.js"></script>
+      <script src="bower_components/angular-material/angular-material.js"></script>
+      <script src="bower_components/angular-material-icons/angular-material-icons.min.js"></script>
+      <script src="bower_components/angular-ui-bootstrap-bower/ui-bootstrap-tpls.js"></script>
+      <script src="bower_components/bootstrap-css/js/bootstrap.min.js"></script>
+      <script src="bower_components/angular-tags/dist/angular-tags-0.2.10.js"></script>
+      <script src="bower_components/angular-messages/angular-messages.js"></script>
+      <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+      <script src="bower_components/ngImgCrop/compile/minified/ng-img-crop.js"></script>
+      <script src="bower_components/angular-img-fallback/angular.dcb-img-fallback.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
+      <script src="bower_components/mdPickers/dist/mdPickers.min.js"></script>
       <script src="bower_components/ng-tags-input/ng-tags-input.min.js"></script>
       <!-- endbower -->
       <script src="socket.io-client/socket.io.js"></script>
