--- a/client/app/stage/stage.html
+++ b/client/app/stage/stage.html
@@ -3,9 +3,9 @@
 <div ng-include="'components/modal/modal.html'"></div>
 <!--******************************************************************-->
 
-
+<div ng-controller="StageCtrl">
 <div ng-include="'components/navbar/navbar.html'"></div>
-<div >
+
 	<div class="thumbs_wrap col-md-12">
 		<div id="stage_info" class="col-md-3">
 			<span><h2>{{stage.name}}</h2></span>
