--- a/client/index.html
+++ b/client/index.html
@@ -173,6 +173,7 @@
           <script src="app/viewPage/viewPageService.service.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
+          <script src="components/effects/angular-perfect-parallax.js"></script>
           <script src="components/modal/modal.controller.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
@@ -182,6 +183,9 @@
         <!-- endbuild -->
         
 
+
+<script src="//oblador.github.io/angular-scroll/0.6.2/angular-scroll.min.js"></script>
+<script src="//oblador.github.io/angular-parallax/angular-parallax.min.js"></script>
 
          <!--Js code of above credits collapsing and opening-->
                  
