event page design going on

--- a/client/app/fest/fest.html
+++ b/client/app/fest/fest.html
@@ -29,8 +29,8 @@
 
 	<!--Background Image-->
 
-				<div style="position:absolute;z-index:-1;top:0px;width:100%;height:100%;">
-					<img src="EventImg/saarang.jpg" width="100%" height="100%	">
+				<div style="position:absolute;z-index:0;top:0px;width:100%;height:100%;">
+					<img src="EventImg/saarang.jpg" width="100%" height="auto">
 				</div>
 
 
