added random effect to posts, and css to profile

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -34,8 +34,8 @@
 
 		<div class="tab-content ">
 			<div id="booked_display" class="tab-pane fade in active" style="min-height:100%">
-				<div>
-					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item" ng-style="margin:5px;width:33.33%;float:left" class="col-md-4">
+				<div style="margin:10px 50px">
+					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item"  class="col-md-4" id="das">
 						
 					</content-item>
 				</div>
