--- a/client/app/admin/admin.html
+++ b/client/app/admin/admin.html
@@ -56,7 +56,7 @@
   <div ng-controller="DatepickerDemoCtrl" class="col-md-12">
       <div class="col-md-4 datepckr">
           <p class="input-group">
-              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtAdmin" is-open="opened" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" style="height:34px" ng-change="bookingDate()"/>
+              <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dtAdmin" is-open="opened" min-date="minDate" max-date="'2037-06-22'" datepicker-options="dateOptions"  ng-required="true" close-text="Close" style="height:34px" ng-change="bookingDate()"/>
               <span class="input-group-btn">
                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
               </span>
