add more css to profile

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -35,7 +35,7 @@
 		<div class="tab-content ">
 			<div id="booked_display" class="tab-pane fade in active" style="min-height:100%">
 				<div style="margin:10px 50px">
-					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item"  class="col-md-4" id="das">
+					<content-item ng-repeat="item in bookings | orderBy:'-createdOn'" content="item" random="false" class="col-md-4" id="das">
 						
 					</content-item>
 				</div>
