--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -345,7 +345,7 @@
 				<!--users content, videos etc-->
 				 <div id="user_hist_div1" class="thumbs_wrap col-md-12">
 
-				 	<div id="stages_list">
+				 	<div id="stages_list" class="box_shadow_up">
 	            		<ul class="nav nav-tabs">
 	            			<li class="active"><a data-toggle="tab" href="#home">Home</a></li>  
 						  	<li ng-repeat="stageList in stageList" ng-click="stageDiv(stageList.id)"><a data-toggle="tab" href="#{{stageList.id}}">{{stageList.name}}</a></li>
