--- a/client/app/uploadPortal/uploadPortal.html
+++ b/client/app/uploadPortal/uploadPortal.html
@@ -4,7 +4,7 @@
 <div ng-controller="UploadPortalCtrl" class="a" ng-class="for_blur">
 
 	<div>
-	<content-item ng-repeat="item in posts | orderBy:'-createdOn'" content="item" ng-style="for_blur">
+	<content-item ng-repeat="item in posts | orderBy:'-createdOn'" content="item" random="true" ng-style="for_blur">
 		
 	</content-item>
 	</div>
