displaying correct posts, all uploads working, event attend working

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
 <div ng-include="'components/modal/modal.html'"></div>
 <!--******************************************************************-->
 
-<div ng-controller="DashboardCtrl" id="for_blur" ng-style="forblur" class="a" ng-class="for_blur">
+<div ng-controller="DashboardCtrl" id="for_blur" >
 <div ng-include="'components/navbar/navbar.html'"></div>
 	
 
