--- a/client/app/stage/stage.html
+++ b/client/app/stage/stage.html
@@ -3,7 +3,7 @@
 <div ng-include="'components/modal/modal.html'"></div>
 <!--******************************************************************-->
 
-<div ng-controller="StageCtrl">
+<div ng-controller="StageCtrl" id="for_blur">
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 	<div class="thumbs_wrap col-md-12">
@@ -35,9 +35,9 @@
 		<div id="stage_content" class="thumbs_wrap col-md-12">
 			
 			
-			<div class="tab-content">
+			<div>
 				<div class="col-md-6">
-					<div id="stage_content_wrap">
+					<div id="stage_content_wrap" class="tab-content">
 						<div id="bkd" class="tab-pane fade in active">
 
 
