--- a/client/app/club/club.html
+++ b/client/app/club/club.html
@@ -135,6 +135,24 @@
 						  	<li><button ng-show="club.admin==loggedInUser._id" type="button" class="btn btn-info btn-lg b2w" data-toggle="modal" data-target="#event" > Create Event</button></li>
 						</ul>
 					</div>
+					<script type="text/javascript">
+				      $(document).ready(function() {
+
+				        $(window).scroll(function () {
+				            //if you hard code, then use console
+				            //.log to determine when you want the 
+				            //nav bar to stick. 
+				            var height=$(window).outerHeight(); 
+				            console.log($(window).scrollTop())
+				          if ($(window).scrollTop() > (height-45)) {
+				            $('#stages_list').addClass('navbar_sec_fixed');
+				          }
+				          if ($(window).scrollTop() < (height-44)) {
+				            $('#stages_list').removeClass('navbar_sec_fixed');
+				          }
+				        });
+				      });
+				    </script>
 				 	<div class="col-md-2" id="clubs_list">
 						<div id="clubs_list_wrap">
 							<p style="font-size:13px;color:white">Events</p>						
