--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -223,6 +223,24 @@
 						  	<li ng-repeat="stageList in stageList" ng-click="stageDiv(stageList.id)"><a data-toggle="tab" href="#{{stageList.id}}">{{stageList.name}}</a></li>
 						</ul>
 					</div>
+					<script type="text/javascript">
+						$(document).ready(function() {
+  
+						  $(window).scroll(function () {
+						      //if you hard code, then use console
+						      //.log to determine when you want the 
+						      //nav bar to stick. 
+						      var height=$(window).outerHeight(); 
+						      console.log($(window).scrollTop())
+						    if ($(window).scrollTop() > (height-45)) {
+						      $('#stages_list').addClass('navbar_sec_fixed');
+						    }
+						    if ($(window).scrollTop() < (height-44)) {
+						      $('#stages_list').removeClass('navbar_sec_fixed');
+						    }
+						  });
+						});
+					</script>
 				 	
 				 	<div id="art_wrap" class="thumbs_wrap">
 			            <div id="user_hist_div2" class="thumbs_wrap">
