--- a/client/app/event/event.html
+++ b/client/app/event/event.html
@@ -53,7 +53,12 @@
             //if you hard code, then use console
             //.log to determine when you want the 
             //nav bar to stick. 
-            var height=$(window).outerHeight(); 
+            var trueHeight=$(window).outerHeight();
+                    var height;
+                    if(trueHeight>500)
+                      height=trueHeight;
+                    else 
+                      height=500;
             console.log($(window).scrollTop())
           if ($(window).scrollTop() > (height-45)) {
             $('#navbar_mdl').addClass('navbar_sec_fixed');
